--- a/googleTranslateWidget/Base.lproj/Main.storyboard
+++ b/googleTranslateWidget/Base.lproj/Main.storyboard
@@ -516,8 +516,11 @@
                             <customView translatesAutoresizingMaskIntoConstraints="NO" id="w2q-Ru-0Zd" userLabel="Buttons Panel">
                                 <rect key="frame" x="15" y="30" width="40" height="592"/>
                                 <subviews>
+                                    <progressIndicator wantsLayer="YES" horizontalHuggingPriority="750" verticalHuggingPriority="750" maxValue="100" bezeled="NO" indeterminate="YES" controlSize="small" style="spinning" translatesAutoresizingMaskIntoConstraints="NO" id="3Gk-UF-w2n">
+                                        <rect key="frame" x="12" y="419" width="16" height="16"/>
+                                    </progressIndicator>
                                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="8WB-iP-02f">
-                                        <rect key="frame" x="0.0" y="472" width="40" height="40"/>
+                                        <rect key="frame" x="0.0" y="359" width="40" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="40" id="GHP-3U-hpC"/>
                                             <constraint firstAttribute="height" constant="40" id="dbe-4o-c24"/>
@@ -532,8 +535,9 @@
                                     </button>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstItem="3Gk-UF-w2n" firstAttribute="centerX" secondItem="w2q-Ru-0Zd" secondAttribute="centerX" id="2CW-Cq-0a9"/>
                                     <constraint firstAttribute="width" constant="40" id="Fzf-py-KI1"/>
-                                    <constraint firstItem="8WB-iP-02f" firstAttribute="top" secondItem="w2q-Ru-0Zd" secondAttribute="top" constant="80" id="Jig-dj-gei"/>
+                                    <constraint firstItem="8WB-iP-02f" firstAttribute="top" secondItem="3Gk-UF-w2n" secondAttribute="bottom" constant="20" id="GHI-yr-ADc"/>
                                     <constraint firstAttribute="trailing" secondItem="8WB-iP-02f" secondAttribute="trailing" id="uDn-oc-LVc"/>
                                 </constraints>
                             </customView>
@@ -586,19 +590,19 @@
                             <customView translatesAutoresizingMaskIntoConstraints="NO" id="p6Q-T2-YCs">
                                 <rect key="frame" x="503" y="0.0" width="400" height="652"/>
                                 <subviews>
-                                    <visualEffectView appearanceType="vibrantDark" blendingMode="behindWindow" material="light" state="active" translatesAutoresizingMaskIntoConstraints="NO" id="8hA-DS-PCN">
+                                    <visualEffectView appearanceType="vibrantLight" blendingMode="behindWindow" material="light" state="active" translatesAutoresizingMaskIntoConstraints="NO" id="8hA-DS-PCN">
                                         <rect key="frame" x="0.0" y="0.0" width="400" height="652"/>
                                         <subviews>
-                                            <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="130" horizontalPageScroll="10" verticalLineScroll="130" verticalPageScroll="10" hasHorizontalScroller="NO" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" horizontalScrollElasticity="none" translatesAutoresizingMaskIntoConstraints="NO" id="QKs-wL-DaT">
+                                            <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="66" horizontalPageScroll="10" verticalLineScroll="66" verticalPageScroll="10" hasHorizontalScroller="NO" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" horizontalScrollElasticity="none" translatesAutoresizingMaskIntoConstraints="NO" id="QKs-wL-DaT">
                                                 <rect key="frame" x="0.0" y="0.0" width="300" height="652"/>
                                                 <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="eQn-8d-br1">
                                                     <rect key="frame" x="0.0" y="0.0" width="300" height="652"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <subviews>
-                                                        <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" selectionHighlightStyle="sourceList" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowHeight="128" rowSizeStyle="automatic" viewBased="YES" id="X0h-mJ-a2m">
+                                                        <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" selectionHighlightStyle="sourceList" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowHeight="65" rowSizeStyle="automatic" viewBased="YES" id="X0h-mJ-a2m">
                                                             <rect key="frame" x="0.0" y="0.0" width="300" height="652"/>
                                                             <autoresizingMask key="autoresizingMask"/>
-                                                            <size key="intercellSpacing" width="3" height="2"/>
+                                                            <size key="intercellSpacing" width="0.0" height="1"/>
                                                             <color key="backgroundColor" name="_sourceListBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                             <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                                             <tableColumns>
@@ -616,7 +620,7 @@
                                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                                     <prototypeCellViews>
                                                                         <tableCellView id="9f6-Ap-spg" customClass="STFavouriteCell">
-                                                                            <rect key="frame" x="1" y="1" width="297" height="65"/>
+                                                                            <rect key="frame" x="0.0" y="0.0" width="297" height="65"/>
                                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                         </tableCellView>
                                                                     </prototypeCellViews>
@@ -628,6 +632,7 @@
                                                             </connections>
                                                         </tableView>
                                                     </subviews>
+                                                    <nil key="backgroundColor"/>
                                                 </clipView>
                                                 <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="dVl-db-InE">
                                                     <rect key="frame" x="-100" y="-100" width="198" height="16"/>
@@ -672,6 +677,7 @@
                             <constraint firstItem="ABY-ei-i8G" firstAttribute="trailing" secondItem="XkX-uv-W0y" secondAttribute="trailing" constant="20" id="bWr-bH-aUw"/>
                             <constraint firstAttribute="trailing" secondItem="p6Q-T2-YCs" secondAttribute="trailing" id="fje-g6-SIr"/>
                             <constraint firstItem="JPE-AV-FTk" firstAttribute="top" secondItem="sbH-9V-EgQ" secondAttribute="bottom" constant="1" id="gmS-Yv-BFl"/>
+                            <constraint firstItem="3Gk-UF-w2n" firstAttribute="centerY" secondItem="JPE-AV-FTk" secondAttribute="centerY" id="msM-4F-5Wp"/>
                             <constraint firstItem="sbH-9V-EgQ" firstAttribute="top" secondItem="SQQ-iM-ddv" secondAttribute="top" constant="30" id="nxR-wg-Xun"/>
                             <constraint firstAttribute="bottom" secondItem="p6Q-T2-YCs" secondAttribute="bottom" id="qCb-FO-tCd"/>
                             <constraint firstItem="w2q-Ru-0Zd" firstAttribute="leading" secondItem="SQQ-iM-ddv" secondAttribute="leading" constant="15" id="rAt-aO-ggk"/>
@@ -681,6 +687,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="activityIndicator" destination="3Gk-UF-w2n" id="648-bP-5IB"/>
                         <outlet property="clearButton" destination="ABY-ei-i8G" id="Ced-Eb-czl"/>
                         <outlet property="favouriteButton" destination="8WB-iP-02f" id="9S1-4s-JRu"/>
                         <outlet property="favouritesContainer" destination="p6Q-T2-YCs" id="QeC-nc-cfK"/>
